--- a/bindings/Cargo.toml
+++ b/bindings/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 edition = "2018"
 
 [dependencies]
-windows = { git = "https://github.com/microsoft/windows-rs.git", branch = "impl_inner" }
+windows = { git = "https://github.com/microsoft/windows-rs.git" }
 
 [build-dependencies]
-windows = { git = "https://github.com/microsoft/windows-rs.git", branch = "impl_inner" }
+windows = { git = "https://github.com/microsoft/windows-rs.git" }
